--- a/style.css
+++ b/style.css
@@ -124,7 +124,7 @@ nav{
 .player-info{
     padding-left: 5px;
 }
-h3{
+h4{
     font-size: 28px;
     font-weight: 700 ;    
 }
@@ -137,7 +137,7 @@ h3{
     transform: scale(1.05);
     transition: transform 1s;
 }
-h3:hover{color:rgba(45, 37, 160, 1) ;}
+h4:hover{color:rgba(45, 37, 160, 1) ;}
 
 /*----------------
  All Highlight Copa America  
@@ -151,7 +151,7 @@ h3:hover{color:rgba(45, 37, 160, 1) ;}
  .highlights-inner{
      width: 50%;
      margin-left: 69px;
-     margin-bottom: 158px;
+     margin-bottom: 100px;
  }
  .highlights-inner img{
     width: 567px;
@@ -180,5 +180,52 @@ color:rgba(0, 0, 0, 1);}
     margin-left: 14px;
 color: grey;
 padding-top: 20px;
+cursor: pointer;
+}
+
+
+/*-------------------- Bonus Part  ---------------*/
+/*----------------- 
+Next Matches Style  
+------------------*/
+.next-matches{
+    margin-bottom: 60px;
+    box-shadow: 0 0 30px rgba(128, 128, 128, 0.096);
+}
+h3{ margin-left: 20px;
+    padding-left: 5px;
+   font-size: 38px;
+   border-left: 5px solid ;
+   border-image: linear-gradient(blue,black);
+   border-image-slice: 1;
+}
+.matches{
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    grid-column-gap: 40px;
+    padding: 30px;
+    
+   
+}
+.match{
+    box-shadow: 5px 5px 30px grey;
+    padding: 15px;
+    border-radius: 5px;
+}
+.match-images{width: 300px;
+border-radius: 5px;}
+.match p{display: flex;
+justify-content: space-between;
+align-items: center;}
+.match a{
+    text-decoration: none;
+    color: whitesmoke;
+    font-weight: 500;
+    background-color: rgba(224, 44, 109, 1);
+    padding: 5px 10px;
+    border-radius: 10px;
+}
+.match:hover{transform: scale(1.07);
+             transition: transform 2s;
 }
 
