--- a/style.css
+++ b/style.css
@@ -194,7 +194,7 @@ Next Matches Style
 }
 h3{ margin-left: 20px;
     padding-left: 5px;
-   font-size: 38px;
+   font-size: 40px;
    border-left: 5px solid ;
    border-image: linear-gradient(blue,black);
    border-image-slice: 1;
@@ -204,8 +204,6 @@ h3{ margin-left: 20px;
     grid-template-columns: repeat(3,1fr);
     grid-column-gap: 40px;
     padding: 30px;
-    
-   
 }
 .match{
     box-shadow: 5px 5px 30px grey;
@@ -226,6 +224,39 @@ align-items: center;}
     border-radius: 10px;
 }
 .match:hover{transform: scale(1.07);
-             transition: transform 2s;
+             transition: transform 1.2s;
 }
-
+/*-------------------
+ Top Clubs Styles 
+ --------------------*/
+ .top-clubs{
+     margin-bottom: 120px;
+     box-shadow: 0 0 30px rgba(128, 128, 128, 0.096);
+ }
+.clubs{display: grid;
+       grid-template-columns: repeat(3,1fr);
+       grid-column-gap: 160px;
+       grid-row-gap: 30px;
+       padding-left: 30px;
+       padding-bottom: 30px;
+}
+.club{display: flex;
+    align-items: center;
+      
+}
+ .club img{width: 90px;
+height: 95px;
+border-radius: 50px;}
+#dortmund-image{height: 80px;}
+h5{
+    font-size: 22px;
+   margin-left: 15px;
+   cursor: pointer;
+}
+h5:hover{color:rgba(45, 37, 160, 1);
+transform: scale(1.1);
+transition: transform 0.5s;}
+.club img:hover{
+    transform: rotate(360deg);
+    transition: transform 2.5s;
+}
