--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ nav{
 .nav-bars{
     display: flex;
     justify-content: space-between; 
-    padding-left: 156px;
+    padding-left: 126px;
     padding-top: 42px;
     padding-right: 88px;
     padding-bottom: 67px;
@@ -19,7 +19,7 @@ nav{
 .bar-names a{
     text-decoration: none;
     color: rgba(255, 255, 255, 1);
-    font-size: 22px;
+    font-size: 18px;
     font-weight: 500;
     padding: 5px 20px;
 }
@@ -112,7 +112,7 @@ nav{
 }
 .player{
     background-color: rgba(255, 255, 255, 1);
-    height:474px ;
+    height:500px ;
     width: 330px;
     padding: 15px;
     box-shadow: 0 0 40px rgba(0, 0, 0, 0.052);
@@ -148,15 +148,13 @@ h4:hover{color:rgba(45, 37, 160, 1) ;}
  --------------------------*/
 
  .highlights{
-     display: flex;
+     display: flex;;
      justify-content: center;
-     align-items: center;
-     margin-left: 380px;
-     margin-right: 200px;
+     padding-left: 13%;
+   
  }
  .highlights-inner{
      width: 50%;
-     margin-left: 69px;
      margin-bottom: 100px;
  }
  .highlights-inner img{
