--- a/media.css
+++ b/media.css
@@ -1,14 +1,15 @@
 @media only screen and (max-width:688px)  {
+   
     .container{
         width: 100%;
-     justify-content: center;
+        justify-content: center;
     }
 
     .nav-bars{display: none;}
 
     .header-sec{ display:flex;
         flex-direction: column;
-      width: 120%;
+      width: 100%;
       
        
     }
@@ -24,7 +25,9 @@
     width: 600px;
     margin-left: 20px;
 }
-h1{line-height: 80px;}
+h1{ font-size: 64px;
+    line-height: 80px;
+}
 
     
     .players{
@@ -36,6 +39,8 @@ h1{line-height: 80px;}
  .highlights{
      display: flex;
      flex-direction: column;
+     
+
 
     
  }
@@ -45,7 +50,7 @@ justify-content: center;
 }
 .highlights-inner{display: flex;
 flex-direction: column;}
- .highlights-inner img{ width: 450px;
+ .highlights-inner img{ width: 470px;
 height: 370px;
 }
 
